correct align of weather icons

--- a/styles/_elements.sass
+++ b/styles/_elements.sass
@@ -1,6 +1,7 @@
 .weather-icon
   width: 2rem
   height: 2rem
+  vertical-align: top
 
 .weather-shaped-button
   -webkit-appearance: none
